SQuirreL SQL Client Change Log
==============================

2.6.8 (?/??/????)
=================

Bug-Fixes:

Import from file to table feature now warns and asks the user to confirm that it is ok to truncate the 
existing table data (The import feature doesn't yet support merging new data with existing data).

2102894: Missing Scale Placeholder in Sql server dialect.  This causes script generation and dbcopy targeting 
MS-SQL server to produce decimal columns without the scale attribute (that is, decimal(7) instead of 
decimal(7,5)).

2.6.7 (9/16/2008)
=================

Bug-Fixes:

Back-ported fixes for SQLite support from trunk.  Basic support for querying and editing data.  SQL
generation features are only available on the trunk, as there were too many other changes to make 
them work properly on this branch.

2091569: FAQ is missing its images

2018018: (Bug in FormatSql function) Formatter now uses platform-specific EOL char sequence.

2092902: Focus remains on hidden session window for Alt-Arrow.  Removed code which was a 
work-around for a bug in java 1.3, that has since been fixed and was actually producing a 
bug seen in java5 and java6, where the Alt-RightArrow key shortcut switched session windows 
into the foreground without giving them focus.  Thanks goes to Johnathan James for the 
bug-fix.

2013346: export csv with option "carriage return + linefeed"

2.6.6 (6/13/2008)
================

Bug-Fixes: 

Sybase Plugin: Fixed bug which caused scripting views to always fail.

Fixed a bug which made it difficult to see text that was being edited in a table.

1968270: Displaying unsigned INT as signed INT in column

1858937: Encoding parameter in desktop file wrong

1830649: Focus Loss


2.6.5a (3/8/2008)
================

Bug-Fixes:

1909015: (Classpath screwed up for 2.6.5). Fixed this issue that was produced when using the Windows launch script (squirrel-sql.bat).

1824534: Constraint created twice in generated scripts


2.6.5 (3/2/2008)